syntax = "proto3";

package co.topl.brambl.models.transaction;

import 'validate/validate.proto';

import 'brambl/models/address.proto';
import 'brambl/models/box/value.proto';
import 'brambl/models/box/attestation.proto';

// Input to a transaction
message SpentTransactionOutput {
    co.topl.brambl.models.TransactionOutputAddress address = 1 [(validate.rules).message.required = true];
    co.topl.brambl.models.box.Attestation attestation = 2 [(validate.rules).message.required = true];
    // the value of the box being spent
    co.topl.brambl.models.box.Value value = 3 [(validate.rules).message.required = true];
}
